--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,8 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+RoxygenNote: 7.1.2
+Depends: 
+    R (>= 2.10)
+URL: https://github.com/jennyjyounglee/TemplatePKGWebsite
+BugReports: https://github.com/jennyjyounglee/TemplatePKGWebsite/issues
