--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: TemplatePKGWebsite
+Package: templatepkgdown
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
@@ -16,5 +16,5 @@ VignetteBuilder: knitr
 RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
-URL: https://github.com/jennyjyounglee/TemplatePKGWebsite
-BugReports: https://github.com/jennyjyounglee/TemplatePKGWebsite/issues
+URL: https://github.com/jennyjyounglee/templatepkgdown
+BugReports: https://github.com/jennyjyounglee/templatepkgdown/issues
